Expose TypeSafe-style SystemOne member endpoints
